--- a/notebooks/SyntheaToEDS.ipynb
+++ b/notebooks/SyntheaToEDS.ipynb
@@ -3,7 +3,7 @@
     "config" : {
       "dependencies" : {
         "scala" : [
-          "file:///opt/generator/generator-target-eds/target/generator-target-eds-jar-with-dependencies.jar",
+          "file:///opt/generator/generator-target-eds-jar-with-dependencies.jar",
           "file:///opt/generator/third-party/synthea-with-dependencies.jar"
         ]
       },
@@ -45,11 +45,11 @@
     },
     {
       "cell_type" : "code",
-      "execution_count" : 2,
+      "execution_count" : 1,
       "metadata" : {
         "cell.metadata.exec_info" : {
-          "startTs" : 1585927085206,
-          "endTs" : 1585927196899
+          "startTs" : 1585988985693,
+          "endTs" : 1585989182129
         },
         "language" : "scala"
       },
@@ -160,16 +160,16 @@
             "Loading module modules/hypertension.json\n",
             "Running with options:\n",
             "Population: 5\n",
-            "Seed: 1585927087320\n",
-            "Provider Seed:1585927087320\n",
+            "Seed: 1585988993598\n",
+            "Provider Seed:1585988993598\n",
             "Location: Massachusetts\n",
             "Min Age: 0\n",
             "Max Age: 140\n",
-            "5 -- Arden380 Hermiston71 (16 y/o M) Boston, Massachusetts \n",
-            "1 -- Ignacio928 Duarte203 (21 y/o M) Southwick, Massachusetts \n",
-            "4 -- Lucien408 Huels583 (38 y/o M) Winchester, Massachusetts \n",
-            "2 -- Jermaine675 Watsica258 (45 y/o M) North Andover, Massachusetts \n",
-            "3 -- Mechelle851 Durgan499 (56 y/o F) Adams, Massachusetts \n",
+            "2 -- Benedict104 Schaefer657 (12 y/o M) Boston, Massachusetts \n",
+            "3 -- Trey250 Cummerata161 (63 y/o M) East Bridgewater, Massachusetts \n",
+            "5 -- Delta800 Boehm581 (47 y/o F) Worcester, Massachusetts \n",
+            "4 -- Jerrold404 Bradtke547 (62 y/o M) Brockton, Massachusetts \n",
+            "1 -- Juan88 O'Connell601 (80 y/o M) Plymouth, Massachusetts \n",
             "Records: total=5, alive=5, dead=0\n"
           ],
           "output_type" : "stream"
@@ -178,7 +178,7 @@
     },
     {
       "cell_type" : "code",
-      "execution_count" : 3,
+      "execution_count" : 2,
       "metadata" : {
         "cell.metadata.exec_info" : {
           "startTs" : 1585927200158,
@@ -193,7 +193,7 @@
       ],
       "outputs" : [
         {
-          "execution_count" : 3,
+          "execution_count" : 2,
           "data" : {
             "text/plain" : [
               "5"
@@ -209,7 +209,7 @@
     },
     {
       "cell_type" : "code",
-      "execution_count" : 4,
+      "execution_count" : 3,
       "metadata" : {
         "cell.metadata.exec_info" : {
           "startTs" : 1585927206918,
@@ -231,7 +231,7 @@
     },
     {
       "cell_type" : "code",
-      "execution_count" : 5,
+      "execution_count" : 4,
       "metadata" : {
         "cell.metadata.exec_info" : {
           "startTs" : 1585927220829,
@@ -264,7 +264,7 @@
     },
     {
       "cell_type" : "code",
-      "execution_count" : 6,
+      "execution_count" : 5,
       "metadata" : {
         "cell.metadata.exec_info" : {
           "startTs" : 1585927227558,
