--- a/notebooks/EDSStandaloneServer.ipynb
+++ b/notebooks/EDSStandaloneServer.ipynb
@@ -4,7 +4,7 @@
       "dependencies" : {
         "scala" : [
           "file:///opt/generator/generator-target-eds-jar-with-dependencies.jar",
-          "file:///opt/fhir-sdk.jar",
+          "file:///opt/fhir-test-sdk.jar",
           "file:///opt/generator/third-party/synthea-with-dependencies.jar"
         ]
       },
@@ -37,10 +37,10 @@
         "# Interacting with the EDS standalone server\n",
         "\n",
         "This small notebook shows how to interact with the EDS standalone server running locally.b\n",
-        "This notebook requires the Docker image to be run with the EDS SDK (\"fhir-sdk.jar\") mounted to \"/opt/fhir-sdk.jar\" in read-only mode, and two links to the EDS server and the OMOP database. It is also possible to cache the Synthea population to save time on multiple runs.<br>\n",
+        "This notebook requires the Docker image to be run with the EDS SDK (\"fhir-test-sdk.jar\") mounted to \"/opt/fhir-test-sdk.jar\" in read-only mode, and two links to the EDS server and the OMOP database. It is also possible to cache the Synthea population to save time on multiple runs.<br>\n",
         "More specifically, if \"./eds-fhir-backend-test\" is the path to the unzipped distribution of the standalone server, the following Docker command can be used to launch the notebooks:\n",
         "\n",
-        "`./make.py docker_run -v $(pwd)/eds-fhir-backend-test:/opt/fhir-sdk.jar:ro --docker=net=app_default --docker=link=app_backend_1:backend --docker=link=app_db_1:db -v $(pwd)/.cache:/opt/generator/.cache`\n",
+        "`./make.py docker_run -v $(pwd)/eds-fhir-backend-test:/opt/fhir-test-sdk.jar:ro --docker=net=app_default --docker=link=app_backend_1:backend --docker=link=app_db_1:db -v $(pwd)/.cache:/opt/generator/.cache`\n",
         "\n",
         "\n"
       ],
@@ -84,7 +84,7 @@
         "            '/' + klass.getName().replace('.', '/') + \".class\"\n",
         "        ).toString\n",
         "    assert(\n",
-        "        location.startsWith(\"jar:file:/opt/fhir-sdk.jar!\"),\n",
+        "        location.startsWith(\"jar:file:/opt/fhir-test-sdk.jar!\"),\n",
         "        s\"unexpected class location ${location}\")\n",
         "}"
       ],
